src/types/tests/snapshots/tgbot__types__tests__message__edit_message_live_location-3.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "inline_message_id": "msg-id",
  "latitude": 3.0,
  "longitude": 4.0
}
