src/types/tests/snapshots/tgbot__types__tests__message__edit_message_live_location.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "chat_id": 1,
  "latitude": 3.0,
  "longitude": 4.0,
  "message_id": 2
}
