src/types/tests/snapshots/tgbot__types__tests__message__edit_message_media-2.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "__attachments__": [
    {
      "id": "tgbot_file_1",
      "mime_type": null,
      "name": null
    }
  ],
  "inline_message_id": "msg-id",
  "media": {
    "media": "attach://tgbot_file_1",
    "type": "photo"
  }
}
