src/types/tests/snapshots/tgbot__types__tests__message__edit_message_media.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "business_connection_id": "c-id",
  "chat_id": "1",
  "media": {
    "media": "file-id",
    "type": "photo"
  },
  "message_id": "2",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "text",
          "url": "url"
        }
      ]
    ]
  }
}
