src/types/tests/snapshots/tgbot__types__tests__message__edit_message_reply_markup-4.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "business_connection_id": "c-id",
  "inline_message_id": "msg-id",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "text",
          "url": "url"
        }
      ]
    ]
  }
}
