src/types/tests/snapshots/tgbot__types__tests__message__edit_message_text-2.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "chat_id": 1,
  "message_id": 2,
  "rich_message": {
    "html": "text"
  }
}
