src/types/tests/snapshots/tgbot__types__tests__message__edit_message_text-3.snap
---
source: src/types/tests/message.rs
expression: actual_form.into_fields()
---
[
    (
        "business_connection_id",
        FormValue::Text(
            "c-id",
        ),
    ),
    (
        "chat_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "link_preview_options",
        FormValue::Text(
            "{\"is_disabled\":true}",
        ),
    ),
    (
        "message_id",
        FormValue::Text(
            "2",
        ),
    ),
    (
        "parse_mode",
        FormValue::Text(
            "Markdown",
        ),
    ),
    (
        "reply_markup",
        FormValue::Text(
            "{\"inline_keyboard\":[[{\"text\":\"text\",\"url\":\"url\"}]]}",
        ),
    ),
    (
        "text",
        FormValue::Text(
            "text",
        ),
    ),
]
