src/types/tests/snapshots/tgbot__types__tests__message__edit_message_text-4.snap
---
source: src/types/tests/message.rs
expression: actual_form.into_fields()
---
[
    (
        "inline_message_id",
        FormValue::Text(
            "msg-id",
        ),
    ),
    (
        "text",
        FormValue::Text(
            "text",
        ),
    ),
]
